# Test-Automation-Framework

./: .gitignore  README.md  apiutil.py  conftest.py  debugtalk.py  environment.xml  extract.yaml  login.yaml  pyproject.toml  pytest.ini  run.py  send_requests.py
base/: apiutil.py  apiutil_business.py  generateId.py  new_testcase_tools.py  new_tools.ui  removefile.py
common/: Pjenkins.py  assertions.py  connection.py  debugtalk.py  dingRobot.py  handleExcel.py  operationcsv.py  operxml.py  read_yaml.py  readyaml.py  recordlog.py  semail.py  send_requests.py  sendrequest.py  two_dimension_data.py
conf/: config.ini  operationConfig.py  setting.py
data/: loginName.yaml  login_data.csv  vehicleNo.csv  测试数据.xls
data/sql/: homePage.xml  newVehicleAddShare.xml
demo/: requests_demo.py
mock_server/api_server/: README.md  pyproject.toml
report/: results.xml
report/allureReport/: index.html
report/temp/: 0043f2f3-596c-4038-8b40-70bf37745abc-container.json  004d34d0-5d76-4b7f-a3cb-830c5dd02dbc-container.json  00620c3b-43ff-4dbb-bb60-6f91d03bbe17-attachment.txt  011b1061-9a3c-4b3e-b5ac-973a9c73815b-container.json  025490e6-2f70-4069-869e-f840d169e98f-attachment.txt  0814b271-280f-4b58-9994-fd06190b414b-attachment.txt  0990e362-fe26-437e-88d2-bc5dc811ec19-result.json  0b9941b9-bbc8-4373-8bfc-c3d3f96dd9a2-container.json  0bdb19a7-a50f-4a6c-a0b4-c54b31060a56-container.json  0e80c9df-8d00-45e5-ab8f-b7bce9adab5b-result.json  113b826f-8784-4747-85a5-8d1d3c1986dc-container.json  14511083-e352-4cfd-b007-57fb9ebba49f-attachment.txt  148f11c0-32bd-467f-975b-a8c87c3b9acb-attachment.txt  14fdc868-a473-4157-badf-5ce23b4cb080-attachment.txt  16b8e0ff-d016-4346-acf6-b04701d8b480-attachment.txt  175fd691-53df-4746-bf9e-d25666246c0e-result.json  1c43d9b1-82b5-4578-96d2-ab6c0ee0953d-attachment.txt  1e288a93-10fd-40da-958a-b1952fe49739-attachment.txt  1e678969-0b7b-44e7-932b-25dd89c4a7dc-result.json  2052a3d4-4edb-4dd9-80e5-ea6934d637d9-attachment.txt  23b53319-6de7-4d0b-b257-0149d4e32f7a-attachment.txt  245ec638-73a5-482b-9511-477cd53d2930-result.json  25d88b6c-9b1b-4a00-8ba7-679b26aac027-attachment.txt  2680baf4-2b33-43ff-85e6-a5a77ce9d75d-attachment.txt  291a8487-03c9-4ae6-9140-f789bc93ca3d-result.json  2aaf4682-fbd8-47fb-8c82-450dfbf1976f-attachment.attach  2cf5e804-3742-4215-9d5a-80d0932e96be-attachment.txt  2d338c65-3a1f-42ec-be29-319ad7134a90-container.json  (+132 more)
test/: test_send_requests.py
testcase/: conftest.py  extract.yaml  login.yaml
tests/: test_send_requests.py
(+24 files in other folders)
